--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ asyncio_default_fixture_loop_scope = function
 log_cli = True
 log_cli_level = INFO
 addopts = -v --cov=tripsage --cov-report=term-missing
+env_files = .env.test
 
 markers =
     models: tests for database models
