--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ DEBUG=false
 ENVIRONMENT=development
 PORT=8000
 
+# Security settings
+JWT_SECRET=your_secure_jwt_secret_here  # REQUIRED: Generate with 'openssl rand -base64 32'
+
 # API Keys
 OPENAI_API_KEY=your_openai_api_key_here
 
