feat: consolidate security documentation following 2025 best practices
- Consolidate RLS implementation, security best practices, and testing guides
- Create organized security documentation hub at docs/07_CONFIGURATION/SECURITY/
- Add comprehensive TOCs with working links
- Update all dates to Jun 2025
- Fix gitignore to properly track security documentation
- Remove duplicate/obsolete security files
- Add reference to new organized docs in main README

Security documentation now follows modern structure with:
- Complete RLS implementation guide
- Comprehensive security testing framework
- Best practices with 8 critical vulnerability fixes
- Performance optimization guidelines
- Monitoring and auditing procedures

--- a/.env.test
+++ b/.env.test
@@ -1,19 +1,46 @@
 # Test environment variables for TripSage
-NEO4J_URI=bolt://localhost:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=test_password
+ENVIRONMENT=testing
+DEBUG=True
+
+# Database configuration (Supabase)
+DATABASE_URL=https://example.supabase.com
+DATABASE_PUBLIC_KEY=test-public-key
+DATABASE_SERVICE_KEY=test-service-key
+DATABASE_JWT_SECRET=test-jwt-secret-for-testing-only
+SECRET_KEY=test-application-secret-key-for-testing-only
+
+# Legacy database settings (for compatibility)
 SUPABASE_URL=https://example.supabase.com
 SUPABASE_KEY=test-key
 SUPABASE_SERVICE_KEY=test-service-key
-MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
-MEMORY_MCP_API_KEY=test-memory-key
 TRIPSAGE_SUPABASE_URL=https://example.supabase.com
 TRIPSAGE_SUPABASE_KEY=test-key
+
+# Redis/Cache (DragonflyDB)
+REDIS_URL=redis://localhost:6379/1
+REDIS_PASSWORD=tripsage_test_password
+DRAGONFLY_URL=redis://localhost:6379/1
+DRAGONFLY_PASSWORD=tripsage_test_password
+
+# AI Services
+OPENAI_API_KEY=sk-test-mock-openai-key-1234567890abcdef
+OPENAI_MODEL=gpt-4
+ANTHROPIC_API_KEY=sk-ant-test-mock-anthropic-key-1234567890abcdef
+
+# External API Keys (test values)
+WEATHER_API_KEY=test-weather-key
+GOOGLE_MAPS_API_KEY=test-maps-key
+DUFFEL_API_KEY=test-duffel-key
+
+# Legacy settings (for compatibility)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=test_password
+MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
+MEMORY_MCP_API_KEY=test-memory-key
 TRIPSAGE_MEMORY_MCP_URL=http://localhost:8000
 TRIPSAGE_TEST_MODE=true
 
-# Additional required keys for Phase 5
-OPENAI_API_KEY=sk-test-mock-openai-key-1234567890abcdef
-ANTHROPIC_API_KEY=sk-ant-test-mock-anthropic-key-1234567890abcdef
-DRAGONFLY_URL=redis://localhost:6379/1
-DRAGONFLY_PASSWORD=tripsage_test_password
+# Rate Limiting
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=60
