feat: exclude security scanning reports from version control
- Add bandit security scanning artifacts to .gitignore
- Follow security best practices to prevent vulnerability exposure
- Align with CI/CD standards for ephemeral security artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -303,6 +303,15 @@ benchmark-*.json
 **/*.consolidated.*
 **/*.migrated.*
 
+# Security scanning reports
+bandit_output.json
+final_bandit_report.json
+bandit-report.*
+*-bandit.json
+security-reports/
+scan-results/
+.scannerwork/
+
 # Version control temporary files
 **/*.orig
 **/*.rej
