feat(testing): implement comprehensive integration, performance, and security testing suites
- Add complete integration test suite for API key lifecycle
- Implement performance testing with pytest-benchmark and locust
- Create comprehensive security tests covering OWASP attack vectors
- Add encryption security validation with PBKDF2HMAC testing
- Include SQL injection prevention and XSS protection tests
- Implement rate limiting and circuit breaker security testing
- Add authentication bypass and penetration testing scenarios
- Fix SecretStr handling in encryption initialization
- Achieve 90%+ test coverage target for BJO-211 components

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,8 @@ test = [
     "fakeredis>=2.29.0",
     "nest-asyncio>=1.6.0",
     "hypothesis>=6.120.0",
+    # Performance and load testing
+    "locust>=2.31.10",
     # Coverage reporting
     "coverage[toml]>=7.8.2",
 ]
