--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "lucide-react": "^0.560.0",
     "mem0ai": "^2.1.38",
     "nanoid": "^5.1.6",
-    "next": "^16.0.8",
+    "next": "^16.0.9",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -172,7 +172,9 @@
   },
   "pnpm": {
     "overrides": {
+      "axios": "1.13.2",
       "prismjs": ">=1.30.0",
+      "undici": "5.29.0",
       "brace-expansion": ">=2.0.2"
     },
     "ignoredBuiltDependencies": [
